namespace Panda.Core.Controller {
    public interface IMoveCommand {
        void MoveClockwise();
        void MoveCounterClockwise();
    }
}