@startuml RobotController

namespace Panda.Core.Controller {
    class RobotController << (S,red) Singleton >> {
        +Color selectedColor
        -ArticulationBody[] articulationChain
        -List<RobotJoint> joints
        -int selectedJointIndex
        -RobotJoint selectedJoint
        -ISelectionObserver selectionObserver
        -_singleton : Singleton

        +getInstance() : Singelton
        +Sart()
        +Update()
        -void IncreaseIndex()
        -void DecreaseIndex()
    }

    interface ISelectionObserver {
        void OnJointSelected(IJointVisulization)
        void SetSelectionColor(Color)
    }

    interface IJointVisulization {
        void Highlight(Color)
        void ResetHighlight(Color[])
        Color[] StoreJointColors()
    }

    interface IMoveCommand {
        void MoveClockwise(float)
        void MoveCounterClockwise(float)
    }

    class SelectionObserver implements ISelectionObserver{
        -IJointVisulization selectedJoint
        -Color seletionColor
        -Color[] previousColor
    
        +SelectionObserver(Color)
        +void OnJointSelected(IJointVisulization)
        +void SetSelectionColor(Color)
    }

    class RobotJoint implements IMoveCommand, IJointVisulization {
        -ArticulationBody joint
        -bool isSelected

        +void Highlight(Color)
        +void ResetHighlight(Color[])
        +Color[] StoreJointColors()
        +Renderer[] GetVisualRenderers()
        +void moveClockwise(float)
        +void moveCounterClockwise(float)
    }

    ' Observer
    RobotController --> ISelectionObserver
    RobotController --> IMoveCommand
    SelectionObserver --> IJointVisulization
}

@enduml